Responsive slide title + fix letter spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,24 @@
-@media (min-width: 1200px) {
+
+
+    @media screen and (min-width: 320px) and (max-width: 768px) {
+        .slide-titre {
+            font-size: 3rem;
+        }
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1366px) {
+        .slide-titre {
+            font-size: 6rem;
+        }
+    }
+
+    @media screen and (min-width: 1366px) {
+        .slide-titre {
+            font-size: 10rem;
+        }
+    }
+    
+    
     .demo-1 .sl-slider-wrapper {
         position: absolute;
         width: 100%;
@@ -192,9 +212,7 @@
         color: #000;
         padding: 20px;
         position: absolute;
-        font-size: 1000%;
         font-weight: 700;
-        letter-spacing: 13px;
         text-transform: uppercase;
         width: 80%;
         left: 10%;
@@ -611,9 +629,9 @@
             opacity: 0;
         }
     }
-}
 
-/* Small devices (landscape phones, 576px and up)
+
+    /* Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
     ...
 }
@@ -634,134 +652,132 @@
 }
 
 /* Media Queries for custom slider */
-@media screen (min-width: 600px) {
-    .demo-1 .deco {
-        width: 130px;
-        height: 130px;
-        margin-left: -65px;
-        margin-bottom: 50px;
+    @media screen (min-width: 600px) {
+        .demo-1 .deco {
+            width: 130px;
+            height: 130px;
+            margin-left: -65px;
+            margin-bottom: 50px;
+        }
+
+        .demo-1 [data-icon]:after {
+            width: 110px;
+            height: 110px;
+            line-height: 110px;
+            font-size: 40px;
+            margin: -55px 0 0 -55px;
+        }
+
+        .demo-1 .sl-slide blockquote {
+            margin-bottom: -120px;
+        }
+
+        .demo-1 .sl-slide h2 {
+            line-height: 22px;
+            margin-bottom: -40px;
+            letter-spacing: 8px;
+        }
+
+        .demo-1 .sl-slide blockquote p:before {
+            line-height: 4rem;
+            width: 40px;
+            height: 40px;
+            font-size: 120px;
+            left: -45px;
+        }
+
+        .demo-2 .sl-slider-wrapper {
+            height: 500px;
+        }
+
+        .demo-2 .sl-slider h2 {
+            font-size: 36px;
+        }
+
+        .demo-2 .sl-slider blockquote {
+            font-size: 16px;
+        }
+
+        .nav-arrows span {
+            position: absolute;
+            z-index: 1;
+            top: 50%;
+            width: 30px;
+            height: 30px;
+            border: 8px solid #ddd;
+            border: 8px solid rgba(150, 150, 150, 0.4);
+            text-indent: -90000px;
+            margin-top: -40px;
+            cursor: pointer;
+            -webkit-transform: rotate(45deg);
+            -moz-transform: rotate(45deg);
+            -o-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+        }
     }
 
-    .demo-1 [data-icon]:after {
-        width: 110px;
-        height: 110px;
-        line-height: 110px;
-        font-size: 40px;
-        margin: -55px 0 0 -55px;
-    }
+    @media screen (min-width: 900px) {
+        .demo-1 .deco {
+            width: 130px;
+            height: 130px;
+            margin-left: -65px;
+            margin-bottom: 50px;
+        }
 
-    .demo-1 .sl-slide blockquote {
-        margin-bottom: -120px;
-    }
+        .demo-1 [data-icon]:after {
+            width: 110px;
+            height: 110px;
+            line-height: 110px;
+            font-size: 40px;
+            margin: -55px 0 0 -55px;
+        }
 
-    .demo-1 .sl-slide h2 {
-        line-height: 22px;
-        font-size: 350%;
-        margin-bottom: -40px;
-        letter-spacing: 8px;
-    }
+        .demo-1 .sl-slide blockquote {
+            margin-bottom: -120px;
+        }
 
-    .demo-1 .sl-slide blockquote p:before {
-        line-height: 4rem;
-        width: 40px;
-        height: 40px;
-        font-size: 120px;
-        left: -45px;
-    }
+        .demo-1 .sl-slide h2 {
+            line-height: 22px;
+            margin-bottom: -40px;
+            letter-spacing: 8px;
+        }
 
-    .demo-2 .sl-slider-wrapper {
-        height: 500px;
-    }
+        .demo-1 .sl-slide blockquote p:before {
+            line-height: 4rem;
+            width: 40px;
+            height: 40px;
+            font-size: 120px;
+            left: -45px;
+        }
 
-    .demo-2 .sl-slider h2 {
-        font-size: 36px;
-    }
+        .demo-2 .sl-slider-wrapper {
+            height: 500px;
+        }
 
-    .demo-2 .sl-slider blockquote {
-        font-size: 16px;
-    }
+        .demo-2 .sl-slider h2 {
+            font-size: 36px;
+        }
 
-    .nav-arrows span {
-        position: absolute;
-        z-index: 1;
-        top: 50%;
-        width: 30px;
-        height: 30px;
-        border: 8px solid #ddd;
-        border: 8px solid rgba(150, 150, 150, 0.4);
-        text-indent: -90000px;
-        margin-top: -40px;
-        cursor: pointer;
-        -webkit-transform: rotate(45deg);
-        -moz-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        transform: rotate(45deg);
-    }
-}
+        .demo-2 .sl-slider blockquote {
+            font-size: 16px;
+        }
 
-@media screen (min-width: 900px) {
-    .demo-1 .deco {
-        width: 130px;
-        height: 130px;
-        margin-left: -65px;
-        margin-bottom: 50px;
+        .nav-arrows span {
+            position: absolute;
+            z-index: 1;
+            top: 50%;
+            width: 30px;
+            height: 30px;
+            border: 8px solid #ddd;
+            border: 8px solid rgba(150, 150, 150, 0.4);
+            text-indent: -90000px;
+            margin-top: -40px;
+            cursor: pointer;
+            -webkit-transform: rotate(45deg);
+            -moz-transform: rotate(45deg);
+            -o-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+        }
     }
-
-    .demo-1 [data-icon]:after {
-        width: 110px;
-        height: 110px;
-        line-height: 110px;
-        font-size: 40px;
-        margin: -55px 0 0 -55px;
-    }
-
-    .demo-1 .sl-slide blockquote {
-        margin-bottom: -120px;
-    }
-
-    .demo-1 .sl-slide h2 {
-        line-height: 22px;
-        font-size: 650%;
-        margin-bottom: -40px;
-        letter-spacing: 8px;
-    }
-
-    .demo-1 .sl-slide blockquote p:before {
-        line-height: 4rem;
-        width: 40px;
-        height: 40px;
-        font-size: 120px;
-        left: -45px;
-    }
-
-    .demo-2 .sl-slider-wrapper {
-        height: 500px;
-    }
-
-    .demo-2 .sl-slider h2 {
-        font-size: 36px;
-    }
-
-    .demo-2 .sl-slider blockquote {
-        font-size: 16px;
-    }
-
-    .nav-arrows span {
-        position: absolute;
-        z-index: 1;
-        top: 50%;
-        width: 30px;
-        height: 30px;
-        border: 8px solid #ddd;
-        border: 8px solid rgba(150, 150, 150, 0.4);
-        text-indent: -90000px;
-        margin-top: -40px;
-        cursor: pointer;
-        -webkit-transform: rotate(45deg);
-        -moz-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        transform: rotate(45deg);
-    }
-}
